modules/gdscript/tests/scripts/analyzer/errors/enum_float_value.gd
enum Size {
	# Error here. Enum values must be integers.
	S = 0.0,
}

func test():
	pass
